[package]
name = "daily_material"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/poly000/daily_material"
license = "MIT"
authors = ["poly000"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
teloxide = { version = "0.9", features = ["macros", "auto-send"] }
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }

[profile.release]
strip = true
codegen-units = 1
lto = true
