[package]
name = "daily_material"
version = "2.0.0"
edition = "2021"
repository = "https://github.com/poly000/daily_material"
license = "MIT"
authors = ["poly000"]
description = "原神当前材料 telegram bot"

[dependencies]
chrono = "0.4.19"
teloxide = { version = "0.10", features = ["macros", "auto-send"] }
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }

[profile.release]
strip = true
codegen-units = 1
lto = true
