[package]
name = "kfc_crazy_thus"
version = "1.0.0"
edition = "2021"
repository = "https://github.com/000lyop/kfc_crazy_thus"
license = "MIT"
authors = ["poly000"]
description = "KFC 疯狂星期四 tg bot"

[dependencies]
chrono = "0.4.22"
teloxide = { version = "0.10.1", features = ["macros", "auto-send", "ctrlc_handler"] }
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }

[profile.release]
strip = true
codegen-units = 1
lto = true
panic = "abort"
